--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         <br>
         <em>Earthvision (CVPR)</em>, 2024
         <br>
-        <a href="https://github.com/mvrl/GeoSynth">project page</a>
+        <a href="geosynth/index.html">project page</a>
         /
         <a href="https://github.com/mvrl/GeoSynth">github</a>
         /
@@ -361,7 +361,9 @@
         <a href="https://arxiv.org/abs/2309.10667">arXiv</a>
         <p></p>
         <p>
-          We propose a metadata-aware self-supervised learning (SSL) framework useful for fine-grained classification and ecological mapping of bird species around the world. Our framework unifies two SSL strategies: Contrastive Learning (CL) and Masked Image Modeling (MIM), while also enriching the embedding space with metadata available with ground-level imagery of birds.
+          We focus on the task of soundscape mapping, which involves predicting the most
+probable sounds that could be perceived at a particular geographic location. We utilise
+recent state-of-the-art models to encode geotagged audio, a textual description of the audio, and an overhead image of its capture location using contrastive pre-training. 
         </p>
       </td>
     </tr>
