--- a/geosynth/index.html
+++ b/geosynth/index.html
@@ -47,6 +47,10 @@
   href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.0.3/styles/default.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.0.3/highlight.min.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
+<script
+	type="module"
+	src="https://gradio.s3-us-west-2.amazonaws.com/4.25.0/gradio.js"
+></script>
 </head>
 <body>
 
@@ -229,6 +233,7 @@ image.save("generated_city.jpg")</code></pre>
   </div>
 </section>
 
+<gradio-app src="https://mvrl-geosynth.hf.space"></gradio-app>
 
 <!--BibTex citation -->
   <section class="section" id="BibTeX">
