--- a/index.html
+++ b/index.html
@@ -430,9 +430,16 @@ recent state-of-the-art models to encode geotagged audio, a textual description 
                 <br>
                 <a href="http://inst.eecs.berkeley.edu/~cs188/fa10/announcements.html">Graduate Student Instructor, CSE 559A Spring 2023</a>
               </td>
+
+            <tr>
+              <td style="padding:20px;width:25%;vertical-align:middle"><p align="center" style="margin-left:-2.5em;">Awesome Huggingface Demos</p>
+                <img src="images/gen.jpg" alt="cs188">
+              </td>
+              <td width="75%" valign="center">
+                 <a href="huggingface-demos/Awesome (Huggingface) Demos 54f8e8e50813400893669605812ae392.html">List of my favorite huggingface demos</a>
+              </td>
             </tr>
             
-
             <!-- <tr>
               <td align="center" style="padding:20px;width:25%;vertical-align:middle">
                 <h2>Basically <br> Blog Posts</h2>
