--- a/index.html
+++ b/index.html
@@ -50,8 +50,41 @@
             </tr>
           </tbody></table>
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-
-
+    
+    <tr>
+      <td style="padding:20px;width:25%;vertical-align:middle">
+        <div class="one">
+          <div class="two" id='psm_image'>
+          <source src="images/task_final.jpg"></div>
+          <img src='images/task_final.jpg' width=100%>
+        </div> 
+      </td>
+      <td style="padding:20px;width:75%;vertical-align:middle">
+        <a href="https://arxiv.org/abs/2406.01917">
+          <span class="papertitle">GOMAA-Geo: GOal Modality Agnostic Active Geo-localization
+          </span>
+        </a>
+        <br>
+        <a href="https://sites.wustl.edu/aayush/">Anindya Sarkar</a>*,
+    <strong>Srikumar Sastry</strong>*,
+        <a href="https://aleksispi.github.io/">Aleksis Pirinen</a>,
+        <a href="https://mig-ai.github.io/person-zhangchongjie.html">Chonjie Zhang</a>,
+        <a href="https://jacobsn.github.io/">Nathan Jacobs</a>,
+        <a href="https://vorobeychik.com/">Yevgeniy Vorobeychik</a>
+        <br>
+        <em>NeurIPS</em>, 2024
+        <br>
+        <a href="https://github.com/mvrl/GOMAA-Geo">project page</a>
+        /
+        <a href="https://github.com/mvrl/GOMAA-Geo">github</a>
+        /
+        <a href="https://arxiv.org/abs/2406.01917">arXiv</a>
+        <p></p>
+        <p>
+          We consider the task of active geo-localization (AGL) in which an agent uses a sequence of visual cues observed during aerial navigation to find a target specified through multiple possible modalities.
+        </p>
+      </td>
+    </tr>
     <tr>
       <td style="padding:20px;width:25%;vertical-align:middle">
         <div class="one">
@@ -117,41 +150,6 @@
         <p></p>
         <p>
           In this work, we present a deep-learning model, GeoBind, that can infer about multiple modalities, specifically text, image, and audio, from satellite imagery of a location. To do this, we use satellite images as the binding element and contrastively align all other modalities to the satellite image data.
-        </p>
-      </td>
-    </tr>
-
-    <tr>
-      <td style="padding:20px;width:25%;vertical-align:middle">
-        <div class="one">
-          <div class="two" id='psm_image'>
-          <source src="images/task_final.jpg"></div>
-          <img src='images/task_final.jpg' width=100%>
-        </div> 
-      </td>
-      <td style="padding:20px;width:75%;vertical-align:middle">
-        <a href="https://arxiv.org/abs/2406.01917">
-          <span class="papertitle">GOMAA-Geo: GOal Modality Agnostic Active Geo-localization
-          </span>
-        </a>
-        <br>
-        <a href="https://sites.wustl.edu/aayush/">Anindya Sarkar</a>*,
-		<strong>Srikumar Sastry</strong>*,
-        <a href="https://aleksispi.github.io/">Aleksis Pirinen</a>,
-        <a href="https://mig-ai.github.io/person-zhangchongjie.html">Chonjie Zhang</a>,
-        <a href="https://jacobsn.github.io/">Nathan Jacobs</a>,
-        <a href="https://vorobeychik.com/">Yevgeniy Vorobeychik</a>
-        <br>
-        <em>Preprint</em>, 2024
-        <br>
-        <a href="https://github.com/mvrl/GOMAA-Geo">project page</a>
-        /
-        <a href="https://github.com/mvrl/GOMAA-Geo">github</a>
-        /
-        <a href="https://arxiv.org/abs/2406.01917">arXiv</a>
-        <p></p>
-        <p>
-          We consider the task of active geo-localization (AGL) in which an agent uses a sequence of visual cues observed during aerial navigation to find a target specified through multiple possible modalities.
         </p>
       </td>
     </tr>
