--- a/index.html
+++ b/index.html
@@ -50,7 +50,38 @@
             </tr>
           </tbody></table>
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-    
+            <tr>
+              <td style="padding:20px;width:25%;vertical-align:middle">
+                <div class="one">
+                  <div class="two" id='psm_image'>
+                  <source src="taxabind/static/images/taxabind_logo.png"></div>
+                  <img src='taxabind/static/images/taxabind_logo.png' width=95%>
+                </div> 
+              </td>
+              <td style="padding:20px;width:75%;vertical-align:middle">
+                <a href="https://openreview.net/forum?id=qnW0LQXY5L">
+                  <span class="papertitle">TaxaBind: A Unified Embedding Space for Ecological Applications</span>
+                </a>
+                <br>
+                <strong>Srikumar Sastry</strong>,
+                <a href="https://subash-khanal.github.io/">Subash Khanal</a>,
+                <a href="https://sites.wustl.edu/aayush/">Aayush Dhakal</a>,
+                <a href="https://adealgis.wixsite.com/adeel-ahmad-geog">Adeel Ahmad</a>,
+                <a href="https://jacobsn.github.io/">Nathan Jacobs</a>
+                <br>
+                <em>Preprint</em>, 2024
+                <br>
+                <a href="https://github.com/mvrl/TaxaBind">project page</a>
+                /
+                <a href="https://github.com/mvrl/TaxaBind">github</a>
+                /
+                <a href="https://arxiv.org/abs/2408.07050">arXiv</a>
+                <p></p>
+                <p>
+                  TaxaBind is a suite of multimodal models useful for downstream ecological tasks covering six modalities: ground-level image, geographic location, satellite image, text, audio, and environmental features.
+                </p>
+              </td>
+            </tr>
     <tr>
       <td style="padding:20px;width:25%;vertical-align:middle">
         <div class="one">
@@ -408,6 +439,10 @@ recent state-of-the-art models to encode geotagged audio, a textual description 
             <tr>
               <td style="padding:20px;width:25%;vertical-align:middle"><p align="center" style="margin-left:-2.5em;">Service</p><img src="images/mentor.jpg"></td>
               <td width="75%" valign="center">
+                <a href="https://iclr.cc/">Reviewer, ICLR 2025</a>
+                <br>
+                <a href="https://aistats.org/aistats2025/index.html">Reviewer, AISTATS 2025</a>
+                <br>
                 <a href="https://neurips.cc/">Reviewer, NeurIPS 2024</a>
                 <br>
                 <a href="https://eccv.ecva.net/">Reviewer, ECCV 2024</a>
