--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <a href="https://adealgis.wixsite.com/adeel-ahmad-geog">Adeel Ahmad</a>,
                 <a href="https://jacobsn.github.io/">Nathan Jacobs</a>
                 <br>
-                <em>Preprint</em>, 2024
+                <em>WACV</em>, 2025
                 <br>
                 <a href="https://github.com/mvrl/TaxaBind">project page</a>
                 /
