--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <br>
                 <em>WACV</em>, 2025
                 <br>
-                <a href="https://github.com/mvrl/TaxaBind">project page</a>
+                <a href="taxabind/index.html">project page</a>
                 /
                 <a href="https://github.com/mvrl/TaxaBind">github</a>
                 /
@@ -139,7 +139,7 @@
         <br>
         <em>ACM Multimedia</em>, 2024
         <br>
-        <a href="https://github.com/mvrl/PSM">project page</a>
+        <a href="https://subash-khanal.github.io/PSM/index.html">project page</a>
         /
         <a href="https://github.com/mvrl/PSM">github</a>
         /
