--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </div> 
               </td>
               <td style="padding:20px;width:75%;vertical-align:middle">
-                <a href="https://openreview.net/forum?id=qnW0LQXY5L">
+                <a href="taxabind/index.html">
                   <span class="papertitle">TaxaBind: A Unified Embedding Space for Ecological Applications</span>
                 </a>
                 <br>
