--- a/taxabind/index.html
+++ b/taxabind/index.html
@@ -270,9 +270,13 @@ processor = taxabind.get_image_processor()</code></pre>
           <h3>
             Demo of species image to satellite image retrieval using TaxaBind. This demo is on cpu so it may take a while!
           </h3>
-          <gradio-app src="https://mvrl-taxabind-demo.hf.space"></gradio-app>
-          <!-- First Image -->
           <div class="publication-image" id="image-container-1">
+          <iframe
+          src="https://mvrl-taxabind-demo.hf.space"
+          frameborder="0"
+          width="850"
+          height="450"
+        ></iframe>
           </div>         
       </div>
     </div>
