--- a/taxabind/index.html
+++ b/taxabind/index.html
@@ -275,7 +275,7 @@ processor = taxabind.get_image_processor()</code></pre>
           src="https://mvrl-taxabind-demo.hf.space"
           frameborder="0"
           width="850"
-          height="450"
+          height="650"
         ></iframe>
           </div>         
       </div>
@@ -287,12 +287,12 @@ processor = taxabind.get_image_processor()</code></pre>
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>@inproceedings{sastry2024geosynth,
-title={GeoSynth: Contextually-Aware High-Resolution Satellite Image Synthesis},
-author={Sastry, Srikumar and Khanal, Subash and Dhakal, Aayush and Jacobs, Nathan},
-booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
-pages={460--470},
-year={2024}
+      <pre><code>@inproceedings{sastry2025taxabind,
+    title={TaxaBind: A Unified Embedding Space for Ecological Applications},
+    author={Sastry, Srikumar and Khanal, Subash and Dhakal, Aayush and Ahmad, Adeel and Jacobs, Nathan},
+    booktitle={Winter Conference on Applications of Computer Vision},
+    year={2025},
+    organization={IEEE/CVF}
 }</code></pre>
     </div>
 </section>
