--- a/taxabind/index.html
+++ b/taxabind/index.html
@@ -126,7 +126,7 @@
               </span>
 
               <span class="link-block">
-                <a href="https://github.com/mvrl/GeoSynth" target="_blank"
+                <a href="https://huggingface.co/collections/MVRL/taxabind-datasets-672292b5a68683b4272950db" target="_blank"
                 class="external-link button is-normal is-rounded is-dark">
                 <span class="icon">
                   <i class="fas fa-database"></i>
@@ -158,7 +158,7 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-      <img src="static/images/framework_2.jpg" alt="GeoSynth">
+      <img src="static/images/framework_2.jpg" alt="TaxaBind">
       <h2 class="subtitle has-text-centered">
         TaxaBind is a suite of multimodal models useful for downstream ecological tasks covering six modalities: ground-level image, geographic location, satellite image, text, audio, and environmental features.
       </h2>
