--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@ recent state-of-the-art models to encode geotagged audio, a textual description 
         </div> 
       </td>
       <td style="padding:20px;width:75%;vertical-align:middle">
-        <a href="https://proceedings.bmvc2023.org/813/">
+        <a href="https://ieeexplore.ieee.org/document/10281434">
           <span class="papertitle">Task Agnostic Cost Prediction Module for Semantic Labeling in Active Learning
           </span>
         </a>
