--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
                   <a href="mailto:srikumarsastry1997@gmail.com">Email</a> &nbsp;/&nbsp;
                   <a href="data/SS_RESUME.pdf">CV</a> &nbsp;/&nbsp;
                   <a href="https://scholar.google.com/citations?user=A-nQa6EAAAAJ&hl=en">Scholar</a> &nbsp;/&nbsp;
-                  <a href="https://github.com/Vishu26/">Github</a>
+                  <a href="https://github.com/Vishu26/">Github</a> &nbsp;/&nbsp;
+                  <a href="#reviewer">Academic Service</a>
                 </p>
               </td>
               <td style="padding:2.5%;width:40%;max-width:40%">
@@ -434,7 +435,7 @@ recent state-of-the-art models to encode geotagged audio, a textual description 
               </td>
             </tr>
           </tbody></table>
-          <table width="100%" align="center" border="0" cellpadding="20"><tbody>
+          <table id="reviewer" width="100%" align="center" border="0" cellpadding="20"><tbody>
             
             <tr>
               <td style="padding:20px;width:25%;vertical-align:middle"><p align="center" style="margin-left:-2.5em;">Service</p><img src="images/mentor.jpg"></td>
@@ -443,7 +444,7 @@ recent state-of-the-art models to encode geotagged audio, a textual description 
                 <br>
                 <a href="https://aistats.org/aistats2025/index.html">Reviewer, AISTATS 2025</a>
                 <br>
-                <a href="https://neurips.cc/">Reviewer, NeurIPS 2024</a>
+                <a href="https://neurips.cc/">Reviewer, NeurIPS 2024</a><font color="red"><strong> (Top Reviewer, Top 8%)</strong></font>
                 <br>
                 <a href="https://eccv.ecva.net/">Reviewer, ECCV 2024</a>
                 <br>
