--- a/index.html
+++ b/index.html
@@ -440,6 +440,10 @@ recent state-of-the-art models to encode geotagged audio, a textual description 
             <tr>
               <td style="padding:20px;width:25%;vertical-align:middle"><p align="center" style="margin-left:-2.5em;">Service</p><img src="images/mentor.jpg"></td>
               <td width="75%" valign="center">
+                <a href="https://cvpr.thecvf.com/">Reviewer, CVPR 2025</a>
+                <br>
+                <a href="https://icml.cc/">Reviewer, ICML 2025</a>
+                <br>
                 <a href="https://iclr.cc/">Reviewer, ICLR 2025</a>
                 <br>
                 <a href="https://aistats.org/aistats2025/index.html">Reviewer, AISTATS 2025</a>
