--- a/index.html
+++ b/index.html
@@ -263,6 +263,36 @@
       <td style="padding:20px;width:25%;vertical-align:middle">
         <div class="one">
           <div class="two" id='psm_image'>
+          <source src="images/climsatdiff.jpg"></div>
+          <img src='images/climsatdiff.jpg' width=100%>
+        </div> 
+      </td>
+      <td style="padding:20px;width:75%;vertical-align:middle">
+        <a href="">
+          <span class="papertitle">ClimSatDiff: Synthesizing the Earth's Surface Conditioned on Climatic Variables using Diffusion Models</span>
+        </a>
+        <br>
+        <strong>Srikumar Sastry</strong>,
+        <a href="https://adealgis.wixsite.com/adeel-ahmad-geog">Adeel Ahmad</a>,
+        <a href="https://sites.wustl.edu/aayush/">Aayush Dhakal</a>,
+        <a href="https://subash-khanal.github.io/">Subash Khanal</a>,
+        <a href="https://ericx003.github.io/">Eric Xing</a>,
+        <a href="https://jacobsn.github.io/">Nathan Jacobs</a>
+        <br>
+        <em>American Geophysical Union (AGU)</em>, 2024
+        <br>
+        <a href="https://subash-khanal.github.io/PSM/index.html">project page</a>
+        <p></p>
+        <p>
+          In this work, we present a model that can synthesize the visual appearance of the Earth's surface conditioned on climate and time. We use PRISM and temporally rich cloud-free Sentinel-2 Level 2A and LandSat-8 for this study. 
+        </p>
+      </td>
+    </tr>
+
+    <tr>
+      <td style="padding:20px;width:25%;vertical-align:middle">
+        <div class="one">
+          <div class="two" id='psm_image'>
           <source src="images/vlpl.png"></div>
           <img src='images/vlpl.png' width=100%>
         </div> 
@@ -350,7 +380,7 @@
         <br>
         <em>WACV</em>, 2024
         <br>
-        <a href="">project page</a>
+        <a href="birdsat/index.html">project page</a>
         /
         <a href="https://github.com/mvrl/BirdSAT#birdsat-cross-view-contrastive-masked-autoencoders-for-bird-species-classification-and-mapping">github</a>
         /
@@ -454,7 +484,7 @@ recent state-of-the-art models to encode geotagged audio, a textual description 
                 <br>
                 <a href="https://www.sciencedirect.com/journal/isprs-journal-of-photogrammetry-and-remote-sensing/about/call-for-papers#vision-language-models-for-remote-sensing-analysis-and-interpretation">Reviewer, ISPRS (VLM For RS) 2024</a>
                 <br>
-                <a href="https://geoai.ornl.gov/cv4eo-wacv/">Reviewer, WACV (CV4EO) 2024 </a>
+                <a href="https://geoai.ornl.gov/cv4eo-wacv/">Reviewer, WACV (CV4EO) [2024-2025] </a>
               </td>
             </tr>
             <tr>
