--- a/taxabind/index.html
+++ b/taxabind/index.html
@@ -79,7 +79,7 @@
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">Washington University<br>WACV, 2025</span>
+                    <span class="author-block">Washington University<br>WACV, 2025 &nbsp <font color="red"><strong>(Oral Presentation)</strong></font></span>
                   </div>
 
                   <div class="column has-text-centered">
