--- a/index.html
+++ b/index.html
@@ -474,9 +474,13 @@ recent state-of-the-art models to encode geotagged audio, a textual description 
                 <br>
                 <a href="https://cvpr.thecvf.com/">Reviewer, CVPR 2025</a>
                 <br>
+                <a href="https://iccv.thecvf.com/">Reviewer, ICCV 2025</a>
+                <br>
                 <a href="https://icml.cc/">Reviewer, ICML 2025</a>
                 <br>
                 <a href="https://iclr.cc/">Reviewer, ICLR 2025</a>
+                <br>
+                <a href="https://acmmm2025.org/">Reviewer, ACM Multimedia 2025</a>
                 <br>
                 <a href="https://aistats.org/aistats2025/index.html">Reviewer, AISTATS 2025</a>
                 <br>
