--- a/index.html
+++ b/index.html
@@ -470,27 +470,27 @@ recent state-of-the-art models to encode geotagged audio, a textual description 
             <tr>
               <td style="padding:20px;width:25%;vertical-align:middle"><p align="center" style="margin-left:-2.5em;">Service</p><img src="images/mentor.jpg"></td>
               <td width="75%" valign="center">
-                <a href="https://jmlr.org/tmlr/">Reviewer, Transactions on Machine Learning Research (TMLR) 2025</a>
+                <a href="https://neurips.cc/">Reviewer, NeurIPS</a> [2024<font color="red"><strong> (Top Reviewer, Top 8%)</strong></font>, 2025]
                 <br>
-                <a href="https://cvpr.thecvf.com/">Reviewer, CVPR 2025</a>
+                <a href="https://jmlr.org/tmlr/">Reviewer, Transactions on Machine Learning Research (TMLR) </a>[2025]
                 <br>
-                <a href="https://iccv.thecvf.com/">Reviewer, ICCV 2025</a>
+                <a href="https://cvpr.thecvf.com/">Reviewer, CVPR </a>[2025]
                 <br>
-                <a href="https://icml.cc/">Reviewer, ICML 2025</a>
+                <a href="https://iccv.thecvf.com/">Reviewer, ICCV </a>[2025]
                 <br>
-                <a href="https://iclr.cc/">Reviewer, ICLR 2025</a>
+                <a href="https://icml.cc/">Reviewer, ICML </a>[2025]
                 <br>
-                <a href="https://acmmm2025.org/">Reviewer, ACM Multimedia 2025</a>
+                <a href="https://iclr.cc/">Reviewer, ICLR </a>[2025]
                 <br>
-                <a href="https://aistats.org/aistats2025/index.html">Reviewer, AISTATS 2025</a>
+                <a href="https://acmmm2025.org/">Reviewer, ACM Multimedia </a>[2025]
                 <br>
-                <a href="https://neurips.cc/">Reviewer, NeurIPS 2024</a><font color="red"><strong> (Top Reviewer, Top 8%)</strong></font>
+                <a href="https://aistats.org/aistats2025/index.html">Reviewer, AISTATS </a>[2025]
                 <br>
-                <a href="https://eccv.ecva.net/">Reviewer, ECCV 2024</a>
+                <a href="https://eccv.ecva.net/">Reviewer, ECCV </a>[2024]
                 <br>
-                <a href="https://www.sciencedirect.com/journal/isprs-journal-of-photogrammetry-and-remote-sensing/about/call-for-papers#vision-language-models-for-remote-sensing-analysis-and-interpretation">Reviewer, ISPRS (VLM For RS) 2024</a>
+                <a href="https://www.sciencedirect.com/journal/isprs-journal-of-photogrammetry-and-remote-sensing/about/call-for-papers#vision-language-models-for-remote-sensing-analysis-and-interpretation">Reviewer, ISPRS (VLM For RS) </a>[2024]
                 <br>
-                <a href="https://geoai.ornl.gov/cv4eo-wacv/">Reviewer, WACV (CV4EO) [2024-2025] </a>
+                <a href="https://geoai.ornl.gov/cv4eo-wacv/">Reviewer, WACV (CV4EO) </a>[2024-2025]
               </td>
             </tr>
             <tr>
