--- a/index.html
+++ b/index.html
@@ -45,12 +45,45 @@
               <td style="padding:20px;width:100%;vertical-align:middle">
                 <h2>Research</h2>
                 <p>
-                  I am interested in computer vision, remote sensing and generative/bayesian modeling. My work involves fusing heterogeneous multimodal data for remote sensing applications involving representation learning, satellite image synthesis, species distribution modeling, change detection, and land cover mapping.
+                  I am interested in multimodal learning, computer vision, remote sensing and generative/bayesian modeling. My work involves multimodal representation learning and fusing heterogeneous multimodal data for remote sensing applications involving fine-grained classification, satellite image synthesis, species distribution modeling, change detection, and land cover mapping.
                 </p>
               </td>
             </tr>
           </tbody></table>
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+            <tr>
+              <td style="padding:20px;width:25%;vertical-align:middle">
+                <div class="one">
+                  <div class="two" id='psm_image'>
+                  <source src="images/tiny_framework_ultimate_2.png"></div>
+                  <img src='images/tiny_framework_ultimate_2.png' width=95%>
+                </div> 
+              </td>
+              <td style="padding:20px;width:75%;vertical-align:middle">
+                <a href="">
+                  <span class="papertitle">RANGE: Retrieval Augmented Neural Fields for Multi-Resolution Geo-Embeddings</span>
+                </a>
+                <br>
+                <a href="https://sites.wustl.edu/aayush/">Aayush Dhakal</a>,
+                <strong>Srikumar Sastry</strong>,
+                <a href="https://subash-khanal.github.io/">Subash Khanal</a>,
+                <a href="https://ericx003.github.io/">Eric Xing</a>,
+                <a href="https://adealgis.wixsite.com/adeel-ahmad-geog">Adeel Ahmad</a>,
+                <a href="https://jacobsn.github.io/">Nathan Jacobs</a>
+                <br>
+                <em>CVPR</em>, 2025
+                <br>
+                <a href="">project page</a>
+                /
+                <a href="">github</a>
+                /
+                <a href="">arXiv</a>
+                <p></p>
+                <p>
+                  We propose a novel retrieval-augmented strategy called RANGE, to fully capture the important visual features necessary to represent a geographic location.
+                </p>
+              </td>
+            </tr>
             <tr>
               <td style="padding:20px;width:25%;vertical-align:middle">
                 <div class="one">
