--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 /
                 <a href="">github</a>
                 /
-                <a href="">arXiv</a>
+                <a href="https://arxiv.org/abs/2502.19781">arXiv</a>
                 <p></p>
                 <p>
                   We propose a novel retrieval-augmented strategy called RANGE, to fully capture the important visual features necessary to represent a geographic location.
