--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <br>
                 <a href="">project page</a>
                 /
-                <a href="">github</a>
+                <a href="https://github.com/mvrl/RANGE">github</a>
                 /
                 <a href="https://arxiv.org/abs/2502.19781">arXiv</a>
                 <p></p>
