--- a/index.html
+++ b/index.html
@@ -523,7 +523,9 @@ recent state-of-the-art models to encode geotagged audio, a textual description 
                 <br>
                 <a href="https://www.sciencedirect.com/journal/isprs-journal-of-photogrammetry-and-remote-sensing/about/call-for-papers#vision-language-models-for-remote-sensing-analysis-and-interpretation">Reviewer, ISPRS (VLM For RS) </a>[2024]
                 <br>
-                <a href="https://geoai.ornl.gov/cv4eo-wacv/">Reviewer, WACV (CV4EO) </a>[2024-2025]
+                <a href="https://www.grss-ieee.org/events/earthvision-2025/">Reviewer, Earthvision Workshop(CVPR) </a>[2025]
+                <br>
+                <a href="https://geoai.ornl.gov/cv4eo-wacv/">Reviewer, CV4EO Workshop (WACV) </a>[2024-2025]
               </td>
             </tr>
             <tr>
