--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <a href="https://adealgis.wixsite.com/adeel-ahmad-geog">Adeel Ahmad</a>,
                 <a href="https://jacobsn.github.io/">Nathan Jacobs</a>
                 <br>
-                <em>WACV</em>, 2025 &nbsp <font color="red"><strong>(Oral Presentation)</strong></font>
+                <em>WACV</em>, 2025 &nbsp <font color="red"><strong>(Oral Presentation, Top 8%)</strong></font>
                 <br>
                 <a href="taxabind/index.html">project page</a>
                 /
