--- a/index.html
+++ b/index.html
@@ -55,12 +55,44 @@
               <td style="padding:20px;width:25%;vertical-align:middle">
                 <div class="one">
                   <div class="two" id='psm_image'>
+                  <source src="images/sat2sound.png"></div>
+                  <img src='images/sat2sound.png' width="95%">
+                </div> 
+              </td>
+              <td style="padding:20px;width:75%;vertical-align:middle">
+                <a href="https://arxiv.org/abs/2505.13777">
+                  <span class="papertitle">Sat2Sound: A Unified Framework for Zero-Shot Soundscape Mapping</span>
+                </a>
+                <br>
+                <a href="https://subash-khanal.github.io/">Subash Khanal</a>,
+            <strong>Srikumar Sastry</strong>,
+                <a href="https://sites.wustl.edu/aayush/">Aayush Dhakal</a>,
+                <a href="https://adealgis.wixsite.com/adeel-ahmad-geog">Adeel Ahmad</a>,
+                <a href="https://jacobsn.github.io/">Nathan Jacobs</a>
+                <br>
+                <em>Preprint</em>, 2025
+                <br>
+                <a href="">project page</a>
+                /
+                <a href="">github</a>
+                /
+                <a href="https://arxiv.org/abs/2505.13777">arXiv</a>
+                <p></p>
+                <p>
+                  A state-of-the-art soundscape mapping framework that leverages a Vision-Language Model (VLM) to enrich the semantic understanding of a location’s soundscape, learns a shared codebook for fine-grained alignment, and enables retrieval-based, location-conditioned soundscape generation.
+                </p>
+              </td>
+            </tr>
+            <tr>
+              <td style="padding:20px;width:25%;vertical-align:middle">
+                <div class="one">
+                  <div class="two" id='psm_image'>
                   <source src="images/tiny_framework_ultimate_2.png"></div>
                   <img src='images/tiny_framework_ultimate_2.png' width=95%>
                 </div> 
               </td>
               <td style="padding:20px;width:75%;vertical-align:middle">
-                <a href="">
+                <a href="https://openaccess.thecvf.com/content/CVPR2025/html/Dhakal_RANGE_Retrieval_Augmented_Neural_Fields_for_Multi-Resolution_Geo-Embeddings_CVPR_2025_paper.html">
                   <span class="papertitle">RANGE: Retrieval Augmented Neural Fields for Multi-Resolution Geo-Embeddings</span>
                 </a>
                 <br>
@@ -93,7 +125,7 @@
                 </div> 
               </td>
               <td style="padding:20px;width:75%;vertical-align:middle">
-                <a href="taxabind/index.html">
+                <a href="https://openaccess.thecvf.com/content/WACV2025/html/Sastry_TaxaBind_A_Unified_Embedding_Space_for_Ecological_Applications_WACV_2025_paper.html">
                   <span class="papertitle">TaxaBind: A Unified Embedding Space for Ecological Applications</span>
                 </a>
                 <br>
