--- a/index.html
+++ b/index.html
@@ -41,6 +41,17 @@
             </tr>
           </tbody></table>
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+            <tr>
+            <td style="padding:20px;width:100%;vertical-align:middle">
+              <h2>News</h2>
+              <ul>
+                <li>May 2025: Started as a PhD research intern at <a href="https://www.dolby.com/">Dolby Laboratories</a>, Sunnyvale.</li>
+                <li>May 2025: Awarded as outstanding researcher at Imaging Science PhD awards 2025.</li>
+              </ul>
+            </td>
+          </tr>
+        </tbody></table>
+          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
               <tr>
               <td style="padding:20px;width:100%;vertical-align:middle">
                 <h2>Research</h2>
@@ -51,6 +62,38 @@
             </tr>
           </tbody></table>
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+            <tr>
+              <td style="padding:20px;width:25%;vertical-align:middle">
+                <div class="one">
+                  <div class="two" id='psm_image'>
+                  <source src="images/teaser_2_cone.png"></div>
+                  <img src='images/teaser_2_cone.png' width="95%">
+                </div> 
+              </td>
+              <td style="padding:20px;width:75%;vertical-align:middle">
+                <a href="">
+                  <span class="papertitle">Global and Local Entailment Learning for Natural World Imagery</span>
+                </a>
+                <br>
+            <strong>Srikumar Sastry</strong>,
+                <a href="https://sites.wustl.edu/aayush/">Aayush Dhakal</a>,
+                <a href="https://ericx003.github.io/">Eric Xing</a>,
+                <a href="https://subash-khanal.github.io/">Subash Khanal</a>,
+                <a href="https://jacobsn.github.io/">Nathan Jacobs</a>
+                <br>
+                <em>ICCV</em>, 2025
+                <br>
+                <a href="">project page</a>
+                /
+                <a href="">github</a>
+                /
+                <a href="">arXiv</a>
+                <p></p>
+                <p>
+                  
+                </p>
+              </td>
+            </tr>
             <tr>
               <td style="padding:20px;width:25%;vertical-align:middle">
                 <div class="one">
