--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="one">
                   <div class="two" id='psm_image'>
                   <source src="images/teaser_2_cone.png"></div>
-                  <img src='images/teaser_2_cone.png' width="95%">
+                  <img src='images/teaser_2_cone.png' width="95%" style="padding-top: 35px;">
                 </div> 
               </td>
               <td style="padding:20px;width:75%;vertical-align:middle">
@@ -90,7 +90,7 @@
                 <a href="">arXiv</a>
                 <p></p>
                 <p>
-                  
+                  In this work, we introduce Radial Cross-Modal Embeddings (RCME), a framework that enables the explicit modeling of transitivity-enforced entailment. Our proposed framework optimizes for the partial order of concepts within vision-language models.
                 </p>
               </td>
             </tr>
@@ -131,7 +131,7 @@
                 <div class="one">
                   <div class="two" id='psm_image'>
                   <source src="images/tiny_framework_ultimate_2.png"></div>
-                  <img src='images/tiny_framework_ultimate_2.png' width=95%>
+                  <img src='images/tiny_framework_ultimate_2.png' width=95% style="padding-top: 35px;">
                 </div> 
               </td>
               <td style="padding:20px;width:75%;vertical-align:middle">
