--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <br>
                 <em>ICCV</em>, 2025
                 <br>
-                <a href="">project page</a>
+                <a href="RCME/index.html">project page</a>
                 /
                 <a href="">github</a>
                 /
