--- a/RCME/index.html
+++ b/RCME/index.html
@@ -86,17 +86,17 @@
                     <div class="publication-links">
                          <!-- Arxiv PDF link -->
                       <span class="link-block">
-                        <a href="https://arxiv.org/pdf/2411.00683" target="_blank"
+                        <a href="" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
                         </span>
-                        <span>Paper</span>
+                        <span>Paper (Coming Soon)</span>
                       </a>
                     </span>
                   
                     <span class="link-block">
-                      <a href="https://github.com/mvrl/TaxaBind?tab=readme-ov-file#%EF%B8%8F-usage" target="_blank" class="external-link button is-normal is-rounded is-dark">
+                      <a href="" target="_blank" class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                           🤗
                         </span>
@@ -106,7 +106,7 @@
 
                   <!-- Github link -->
                   <span class="link-block">
-                    <a href="https://github.com/mvrl/TaxaBind" target="_blank"
+                    <a href="" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
@@ -116,7 +116,7 @@
                 </span>
 
                 <span class="link-block">
-                  <a href="https://huggingface.co/spaces/MVRL/taxabind-demo" target="_blank"
+                  <a href="" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="fas fa-laptop"></i>
@@ -127,12 +127,12 @@
 
                 <!-- ArXiv abstract Link -->
                 <span class="link-block">
-                  <a href="https://arxiv.org/abs/2411.00683" target="_blank"
+                  <a href="" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="ai ai-arxiv"></i>
                   </span>
-                  <span>arXiv</span>
+                  <span>arXiv (Coming Soon)</span>
                 </a>
               </span>
             </div>
