--- a/RCME/index.html
+++ b/RCME/index.html
@@ -154,7 +154,7 @@
       <img src="static/images/example_2_1.gif" style="width: 48%;">
 
       <h2 class="subtitle has-text-centered">
-        Our method transforms the textual embedding space to enforce local entailment and global partial order.
+        Our method transforms the textual embedding space to enforce local entailment and global partial order. In simple terms, given a multi-level hierarchy, we enforce two properties: 1) Siblings from the same parent share similar embeddings and 2) coarse-grained concepts are closer to a root concept than fine-grained concepts.
       </h2>
     </div>
   </div>
