--- a/RCME/index.html
+++ b/RCME/index.html
@@ -208,6 +208,7 @@
       <div class="columns is-centered">
         <div class="column is-four-fifths">
           <!-- First Image -->
+           <h3>✅ State-of-the-art ordering and hierarchical image-text retrieval performance.</h3>
           <div class="publication-image" id="image-container-1" style="text-align: center;">
             <img src="static/images/retrieval.png" alt="method" width="70%">
             <h3>
