--- a/RCME/index.html
+++ b/RCME/index.html
@@ -187,11 +187,11 @@
           
           <!-- First Image -->
           <div class="publication-image" id="image-container-1">
-            <img src="static/images/teaser_2_cone.png" alt="method" width="70%">
+            <img src="static/images/teaser_2_cone.png" alt="method" width="60%">
             <h3>
               Conceptual overview of our method focusing on preserving the global order of concepts in vision-language models according to their distance from an entailment root. Our method aims to enforce transitivity in entailment.
             </h3><br>
-            <img src="static/images/entail.png" alt="method">
+            <img src="static/images/entail.png" alt="method" width="70%">
             <h3>
               Transitivity in Entailment: In an ideal transitivity-imposed entailment, textual embeddings satisfy partial order conditions.
             </h3>
@@ -210,7 +210,7 @@
           <!-- First Image -->
            <h3>✅ State-of-the-art ordering and hierarchical image-text retrieval performance.</h3>
           <div class="publication-image" id="image-container-1" style="text-align: center;">
-            <img src="static/images/retrieval.png" alt="method" width="70%">
+            <img src="static/images/retrieval.png" alt="method" width="60%">
             <h3>
               We evaluate the ability of different models to encode the partial order of taxonomies in the Tree of Life. Additionally, we evaluate the models on the standard task of hierarchical image-text retrieval.
             </h3>
