--- a/taxabind/index.html
+++ b/taxabind/index.html
@@ -86,7 +86,7 @@
                     <div class="publication-links">
                          <!-- Arxiv PDF link -->
                       <span class="link-block">
-                        <a href="https://arxiv.org/pdf/2411.00683" target="_blank"
+                        <a href="https://openaccess.thecvf.com/content/WACV2025/html/Sastry_TaxaBind_A_Unified_Embedding_Space_for_Ecological_Applications_WACV_2025_paper.html" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
