--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 /
                 <a href="">github</a>
                 /
-                <a href="">arXiv</a>
+                <a href="https://arxiv.org/abs/2506.21476">arXiv</a>
                 <p></p>
                 <p>
                   In this work, we introduce Radial Cross-Modal Embeddings (RCME), a framework that enables the explicit modeling of transitivity-enforced entailment. Our proposed framework optimizes for the partial order of concepts within vision-language models.
