--- a/RCME/index.html
+++ b/RCME/index.html
@@ -214,6 +214,12 @@
             <h3>
               We evaluate the ability of different models to encode the partial order of taxonomies in the Tree of Life. Additionally, we evaluate the models on the standard task of hierarchical image-text retrieval.
             </h3>
+          </div>
+          <div class="publication-image" id="image-container-1" style="text-align: center;">
+            <img src="static/images/hierarcaps.png" alt="method" width="60%">
+            <h3>
+              Hierarchical retrieval performance on HierarCaps dataset.
+            </h3>
           </div>         
       </div>
     </div>
