--- a/RCME/index.html
+++ b/RCME/index.html
@@ -96,22 +96,22 @@
                     </span>
                   
                     <span class="link-block">
-                      <a href="" target="_blank" class="external-link button is-normal is-rounded is-dark">
+                      <a href="https://huggingface.co/MVRL/rcme-tol-vit-base-patch16" target="_blank" class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                           🤗
                         </span>
-                        <span>Models (Coming Soon)</span>
+                        <span>Models</span>
                       </a>
                     </span>
 
                   <!-- Github link -->
                   <span class="link-block">
-                    <a href="" target="_blank"
+                    <a href="https://github.com/mvrl/RCME" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
-                    <span>GitHub (Coming Soon)</span>
+                    <span>GitHub</span>
                   </a>
                 </span>
 
