--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <br>
                 <a href="RCME/index.html">project page</a>
                 /
-                <a href="">github</a>
+                <a href="https://github.com/mvrl/RCME">github</a>
                 /
                 <a href="https://arxiv.org/abs/2506.21476">arXiv</a>
                 <p></p>
