--- a/index.html
+++ b/index.html
@@ -580,6 +580,8 @@ recent state-of-the-art models to encode geotagged audio, a textual description 
             <tr>
               <td style="padding:20px;width:25%;vertical-align:middle"><p align="center" style="margin-left:-2.5em;">Service</p><img src="images/mentor.jpg"></td>
               <td width="75%" valign="center">
+                <a hreaf="https://aaai.org/conference/aaai/aaai-26/">Reviewer, AAAI </a>[2026]
+                <br>
                 <a href="https://neurips.cc/">Reviewer, NeurIPS</a> [2024<font color="red"><strong> (Top Reviewer, Top 8%)</strong></font>, 2025]
                 <br>
                 <a href="https://jmlr.org/tmlr/">Reviewer, Transactions on Machine Learning Research (TMLR) </a>[2025]
@@ -600,7 +602,7 @@ recent state-of-the-art models to encode geotagged audio, a textual description 
                 <br>
                 <a href="https://www.grss-ieee.org/events/earthvision-2025/">Reviewer, Earthvision Workshop(CVPR) </a>[2025]
                 <br>
-                <a href="https://geoai.ornl.gov/cv4eo-wacv/">Reviewer, CV4EO Workshop (WACV) </a>[2024-2025]
+                <a href="https://geoai.ornl.gov/cv4eo-wacv/">Reviewer, CV4EO Workshop (WACV) </a>[2024,2025]
               </td>
             </tr>
             <tr>
