--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
         <a href="https://adealgis.wixsite.com/adeel-ahmad-geog">Adeel Ahmad</a>,
         <a href="https://jacobsn.github.io/">Nathan Jacobs</a>
         <br>
-        <em>Preprint</em>, 2024
+        <em>Computer Vision for Ecology Workshop (CV4E), ICCV</em>, 2025
         <br>
         <a href="https://arxiv.org/abs/2312.08334">arXiv</a>
         <p></p>
